# ultimate-nokori-jikan-wakaru-yaatu

./: .eslintrc.yml  .gitignore  .prettierrc.yml  .releaserc.json  .stylelintrc.yml  README.md  TODO.md  bun.lockb  changelog.config.cjs  dprint.json  eslint.config.js  index.html  knip.json  package.json  prepare.sh  tmp.json  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  version  vite-sb.config.ts  vite.config.ts
--beta/: package.json
--beta/src-tauri/: Cargo.toml  tauri.conf.json
--beta/src-tauri/src/: main.rs
.github/ISSUE_TEMPLATE/: バグ報告.md  機能リクエスト.md
.github/workflows/: build.yml  download-cache.yml  issue-closed.yml  pull-request.yml  release.yml
.husky/: pre-commit
.react-router/types/: +register.ts  +virtual.d.ts
.storybook/: main.ts  preview.tsx
app/: App.css  App.scss  commands.d.ts  root.tsx  routes.ts  styles.css  theme.tsx
app/components/AdvancedFormatterTable/: AdvancedFormatterTable.stories.tsx  AdvancedFormatterTable.tsx  index.tsx
app/components/AutoScaledInput/: AutoScaledInput.tsx  index.tsx  style.module.scss  style.module.scss.d.ts
app/components/BasicFormatterTable/: BasicFormatterTable.stories.tsx  BasicFormatterTable.tsx  index.tsx
app/components/ButtonModal/: ButtonModal.stories.tsx  ButtonModal.tsx
app/components/Diary/: Diary.stories.tsx  Diary.tsx  index.tsx
app/components/DynamicInput/: DynamicInput.tsx  index.tsx
app/components/DynamicInputInput/: DynamicInputInput.tsx  index.tsx  style.module.scss  style.module.scss.d.ts
app/components/DynamicInputPlaceholder/: DynamicInputPlaceholder.tsx  index.tsx  style.module.scss  style.module.scss.d.ts
app/components/FormatterTable/: FormatterTable.stories.tsx  FormatterTable.tsx  _FormatterTable.tsx  index.tsx
app/components/FormatterTableTextarea/: FormatterTableTextarea.stories.tsx  FormatterTableTextarea.tsx  index.tsx
app/components/Header/: Header.stories.tsx  Header.tsx  style.module.css  style.module.scss
app/components/Init/: Init.tsx  index.tsx
app/contexts/: disabled.tsx
app/hooks/: checkedState.ts  deepCompare.ts  nextTiming.ts  useAppVersion.tsx  useDiaries.tsx  useMode.tsx
app/libs/: cacher.ts  classes.ts  course.ts  diary.ts  invoke.ts  listen.ts  markdown-emojis.ts  pjs.ts  schedule.ts  update.ts  weightedRandom.ts
app/routes/: _index.tsx  diary.tsx  help.tsx  home.tsx  notFound.tsx  setting.tsx  update.tsx  window.tsx
app/store/: titleStore.ts
app/stores/: config.tsx
crates/merge-types/: Cargo.toml
crates/ts-rs-fn/: Cargo.toml
scripts/issue/: closed.js  closed.ts  global.d.ts
scripts/pre-commit/: dprint-parser.js
src/: #App.tsx  App.tsx  _App.tsx  main.tsx  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Schedule.ts  ScheduleTime.ts  greet.ts  types.d.ts
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.yml
src-tauri/src/: lib.rs  main.rs  manager.rs  merge_types.rs  schedule.rs  tray.rs  updater.rs
src-tauri/src/features/: commands.rs  config.rs  mod.rs  tray.rs  updater.rs
src-tauri/src/libs/: log.rs  manager.rs  mod.rs  schedule.rs
src/libs/: _schedule.ts  schedule.ts  scheduleMap.ts  type-animation.ts
src/store/: schedule.ts  title.ts
(+68 files in other folders)
