[build-dependencies]
[build-dependencies.tauri-build]
features = []
version = '2.0.0'

[dependencies]
chrono = '0.4.38'
chrono-tz = '0.10.0'
handlebars = '6.2.0'
log = '0.4.22'
serde_json = '1'
tauri-plugin-process = '2'
tauri-plugin-shell = '2.0.0'
tauri-plugin-updater = '2.1.0'
ts-rs = '10.1.0'

[dependencies.serde]
features = ['derive']
version = '1'

[dependencies.tauri]
features = ['tray-icon', "devtools"]
version = '2.0.6'

[dependencies.tokio]
features = ['tracing']
version = '1.41.0'

[lib]
crate-type = ['staticlib', 'cdylib', 'rlib']
name = 'uljika_lib'

[package]
authors = ['Alinco8']
description = 'Ultimate Nokori Jikan Wakaru Yaatu'
edition = '2021'
name = 'uljika'
version = '2.3.1'

[target]
[target.'cfg(not(any(target_os = "android", target_os = "ios")))']
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = '2'
